productive/vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appname-deployment
spec:
  selector:
    matchLabels:
      app: appname
  template:
    metadata:
      labels:
        app: appname
    spec:
      containers:
      - name: appname
        image: gcr.io/google-containers/busybox
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: appname-service
spec:
  type: NodePort # NodePort or LoadBalancer
  selector:
    app: appname
  ports:
  - port: 4002
    targetPort: 8080
